# genpolab

./: genfig.py  polab.py  pyproject.toml  refractive_indices_info.xlsx
